info: Product API changes

--- a/views/mailers/new_reset_password.ejs
+++ b/views/mailers/new_reset_password.ejs
@@ -1,7 +1,7 @@
 <body style="font-family: 'Arial', sans-serif; margin: 0; padding: 0; background-color: #fff; color: #333;">
     <div class="container" style="max-width: 600px; margin: 20px auto; background-color: #fff; padding: 20px; border-radius: 8px;">
         <h1 style="color: #0F766E;">Password Reset</h1>
-        <p>Dear <%=user.user.userName%>,</p>
+        <p>Dear <%=user.user.name%>,</p>
         <p>We received a request to reset your password. If you made this request, please follow the instructions below. If you didn't make this request, you can safely ignore this email.</p>
         <p><strong>Instructions:</strong></p>
         <ol>
